work on latticeNode and starting lattice

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,15 +1,17 @@
 CC = g++
 CPPFLAGS = -std=c++20 -Wall -Wextra
 
-.PHONY: run
-run: main
+
+all: main
 	./main
+.PHONY: run
 
 main: main.o
 	$(CC) $^ -o $@
 main.o: main.cpp
 	$(CC) $(CPPFLAGS) -c $^ -o $@
 
-.PHONY: clean
+
 clean:
 	rm *.o
+.PHONY: clean
