--- a/src/Makefile
+++ b/src/Makefile
@@ -1,15 +1,17 @@
 CC = g++
 CPPFLAGS = -std=c++20 -Wall -Wextra
-
+SRCS = main.cpp velocitySet.cpp
+OBJS = $(SRCS:.cpp=.o)
 
 all: main
 	./main
 .PHONY: run
 
-main: main.o
-	$(CC) $^ -o $@
-main.o: main.cpp
-	$(CC) $(CPPFLAGS) -c $^ -o $@
+main: $(OBJS)
+	$(CC) -o $@ $(OBJS)
+
+%.o: %.cpp
+	$(CC) $(CPPFLAGS) -c $< -o $@
 
 
 clean:
