--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 CC = g++
 CPPFLAGS = -std=c++20 -Wall -Wextra
-SRCS = main.cpp velocitySet.cpp lattice.cpp lattice2D.cpp
+SRCS = main.cpp velocitySet.cpp lattice.cpp lattice2D.cpp lbm.cpp
 OBJS = $(SRCS:.cpp=.o)
 
 all: main
