--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,10 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -O3 -Wno-ignored-qualifiers")
 
 find_package (Eigen3 3.3 REQUIRED NO_MODULE)
+find_package(OpenMP REQUIRED)
+if(OpenMP_CXX_FOUND)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+endif()
 
 set(SOURCES
     src/main.cpp
@@ -36,4 +40,4 @@ target_include_directories(${PROJECT_NAME} PRIVATE
     include/
 )
 
-target_link_libraries (${PROJECT_NAME} Eigen3::Eigen)
+target_link_libraries (${PROJECT_NAME} Eigen3::Eigen OpenMP::OpenMP_CXX)
