--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,6 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -O3 -Wno-ignored-qualifiers")
 
 find_package (Eigen3 3.3 REQUIRED NO_MODULE)
-find_package(OpenMP REQUIRED)
-if(OpenMP_CXX_FOUND)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-endif()
 
 set(SOURCES
     src/main.cpp
@@ -30,14 +26,31 @@ set(HEADERS
     include/latticeReader.hpp
     include/lbm.hpp
     include/velocitySet.hpp
+    include/inletInitializer.hpp
 )
 
 
-add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
 
-target_include_directories(${PROJECT_NAME} PRIVATE 
-    ${EIGEN3_INCLUDE_DIRS}
-    include/
+find_package(OpenMP REQUIRED)
+if(OpenMP_CXX_FOUND)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+endif()
+
+add_executable("${PROJECT_NAME}-seq" ${SOURCES} ${HEADERS})
+add_executable("${PROJECT_NAME}-omp" ${SOURCES} ${HEADERS})
+
+
+target_include_directories("${PROJECT_NAME}-seq" PRIVATE 
+${EIGEN3_INCLUDE_DIRS}
+include/
 )
 
-target_link_libraries (${PROJECT_NAME} Eigen3::Eigen OpenMP::OpenMP_CXX)
+target_include_directories("${PROJECT_NAME}-omp" PRIVATE 
+${EIGEN3_INCLUDE_DIRS}
+include/
+)
+
+target_link_libraries ("${PROJECT_NAME}-seq" Eigen3::Eigen)
+target_link_libraries ("${PROJECT_NAME}-omp" Eigen3::Eigen OpenMP::OpenMP_CXX)
+
+#target_link_libraries (${PROJECT_NAME} Eigen3::Eigen)
