--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lib/eigen"]
-	path = lib/eigen
+[submodule "include/eigen"]
+	path = include/eigen
 	url = https://gitlab.com/libeigen/eigen.git
