Add inlet update test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,3 +10,4 @@ endmacro()
 # Adding reading executable
 add_test_executable(LatticeReading.out "unit/LatticeReadingTest.cpp")
 add_test_executable(Lid.out "unit/LiddrivenTest.cpp")
+add_test_executable(InletUpdate.out "unit/InletUpdates.cpp")
