Changes and corrections (from init. to coll.)

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,3 +11,4 @@ endmacro()
 add_test_executable(LatticeReading.out "unit/LatticeReadingTest.cpp")
 add_test_executable(Lid.out "unit/LiddrivenTest.cpp")
 add_test_executable(InletUpdate.out "unit/InletUpdates.cpp")
+add_test_executable(LidExec.out "unit/LidExecTest.cpp")
