--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,3 +12,4 @@ add_test_executable(LatticeReading.out "unit/LatticeReadingTest.cpp")
 add_test_executable(Lid.out "unit/LiddrivenTest.cpp")
 add_test_executable(InletUpdate.out "unit/InletUpdates.cpp")
 add_test_executable(LidExec.out "unit/LidExecTest.cpp")
+add_test_executable(GenerationTest.out "unit/GenerationTest.cpp")
