Correct lattice construction and add test
-now the construction infrastructure can be used for computation, even though it will still be updated to manage obstacles.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,3 +13,4 @@ add_test_executable(Lid.out "unit/LiddrivenTest.cpp")
 add_test_executable(InletUpdate.out "unit/InletUpdates.cpp")
 add_test_executable(LidExec.out "unit/LidExecTest.cpp")
 add_test_executable(GenerationTest.out "unit/GenerationTest.cpp")
+add_test_executable(LidFromGeneration.out "unit/LidFromGeneration.cpp")
