Add TRT Collision and other updates
- Add TRT Collision Operator
- Add Computation of coefficients for both BGK and TRT Operators
- Add the DEBUG macro to check numerical stability in the lattice

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -15,4 +15,7 @@ add_test_executable(LidExec.out "unit/LidExecTest.cpp")
 add_test_executable(GenerationTest.out "unit/GenerationTest.cpp")
 add_test_executable(LidFromGeneration.out "unit/LidFromGeneration.cpp")
 add_test_executable(PerimeterGeneration.out "unit/PerimeterGeneration.cpp")
+add_test_executable(BGKParameterTest.out "unit/BGKParameterTest.cpp")
+add_test_executable(TRTLidDrivenTest.out "unit/TRTLidDrivenTest.cpp")
+
 
