Add obstacle generation infrastructure
- Introduce ObstaclePoint type to contain information about an obstacle node: coordinates and a bitset describing the propagation directions.
- Modify the present system to accomodate the ObstaclePoint type introduction.
- Modify the lattice generation infrastructure to build a hyper rectangle and identify the propagation direction in the d2q9 velocity set
- Add test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,5 +17,6 @@ add_test_executable(LidFromGeneration.out "unit/LidFromGeneration.cpp")
 add_test_executable(PerimeterGeneration.out "unit/PerimeterGeneration.cpp")
 add_test_executable(BGKParameterTest.out "unit/BGKParameterTest.cpp")
 add_test_executable(TRTLidDrivenTest.out "unit/TRTLidDrivenTest.cpp")
+add_test_executable(ObstacleGenerationTest.out "unit/ObstacleGeneration.cpp")
 
 
