Add open boundary policy and rough wind tunnel test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,3 +24,4 @@ add_test_executable(TRTLidDrivenTest.out "unit/TRTLidDrivenTest.cpp")
 add_test_executable(ObstacleGenerationTest.out "unit/ObstacleGeneration.cpp")
 add_test_executable(OMPTRTLidDrivenTest.out "unit/OMPTRTLidDrivenTest.cpp")
 add_test_executable(LidWithObstacle.out "unit/LidWithObstacle.cpp")
+add_test_executable(OpenBoundaryOutlet.out "unit/OpenBoundaryOutlet.cpp")
