--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,3 +25,4 @@ add_test_executable(ObstacleGenerationTest.out "unit/ObstacleGeneration.cpp")
 add_test_executable(OMPTRTLidDrivenTest.out "unit/OMPTRTLidDrivenTest.cpp")
 add_test_executable(LidWithObstacle.out "unit/LidWithObstacle.cpp")
 add_test_executable(OpenBoundaryOutlet.out "unit/OpenBoundaryOutlet.cpp")
+add_test_executable(SphereGenerationTest.out "unit/SphereGenerationTest.cpp")
