Ready to start CUDA

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,3 +26,4 @@ add_test_executable(OMPTRTLidDrivenTest.out "unit/OMPTRTLidDrivenTest.cpp")
 add_test_executable(LidWithObstacle.out "unit/LidWithObstacle.cpp")
 add_test_executable(OpenBoundaryOutlet.out "unit/OpenBoundaryOutlet.cpp")
 add_test_executable(SphereGenerationTest.out "unit/SphereGenerationTest.cpp")
+add_test_executable(CUDATRTLidDrivenTest.out "unit/CUDATRTLidDrivenTest.cpp")
