--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,5 +24,7 @@ add_test_executable(TRTLidDrivenTest.out "unit/TRTLidDrivenTest.cpp")
 add_test_executable(ObstacleGenerationTest.out "unit/ObstacleGeneration.cpp")
 add_test_executable(OMPTRTLidDrivenTest.out "unit/OMPTRTLidDrivenTest.cpp")
 add_test_executable(LidWithObstacle.out "unit/LidWithObstacle.cpp")
+add_test_executable(LidWithPSObstacle.out "unit/LidWithPSObstacle.cpp")
+add_test_executable(LidWithOMPPSobstacle.out "unit/LidWithOMPPSobstacle.cpp")
 add_test_executable(OpenBoundaryOutlet.out "unit/OpenBoundaryOutlet.cpp")
 add_test_executable(SphereGenerationTest.out "unit/SphereGenerationTest.cpp")
