STDExecution parallelization implemented

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -23,6 +23,7 @@ add_test_executable(BGKParameterTest.out "unit/BGKParameterTest.cpp")
 add_test_executable(TRTLidDrivenTest.out "unit/TRTLidDrivenTest.cpp")
 add_test_executable(ObstacleGenerationTest.out "unit/ObstacleGeneration.cpp")
 add_test_executable(OMPTRTLidDrivenTest.out "unit/OMPTRTLidDrivenTest.cpp")
+add_test_executable(STDExecTRTLidDrivenTest.out "unit/STDExecTRTLidDrivenTest.cpp")
 add_test_executable(LidWithObstacle.out "unit/LidWithObstacle.cpp")
 add_test_executable(LidWithPSObstacle.out "unit/LidWithPSObstacle.cpp")
 add_test_executable(LidWithOMPPSobstacle.out "unit/LidWithOMPPSobstacle.cpp")
