Add example material and obstacle reading

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -14,3 +14,10 @@ endmacro()
 # Adding reading executable
 add_tutorial(1_LidDrivenCavity.out "1_LidDrivenCavity.cpp")
 add_tutorial(2_Pouseille.out "2_Pouseille.cpp")
+add_tutorial(3_Vortex.out "3_Vortex.cpp")
+add_tutorial(4_ComplexGeometry.out "4_ComplexGeometry.cpp")
+add_tutorial(5_RandomGeneration.out "5_RandomGeneration.cpp")
+add_tutorial(6_FlowAnalysis.out "6_FlowAnalysis.cpp")
+add_tutorial(7_WingProfile1.out "7_WingProfile1.cpp")
+add_tutorial(8_WingProfile2.out "8_WingProfile2.cpp")
+add_tutorial(9_Conduct.out "9_Conduct.cpp")
