--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -29,3 +29,4 @@ add_test_executable(LidWithPSObstacle.out "unit/LidWithPSObstacle.cpp")
 add_test_executable(LidWithOMPPSobstacle.out "unit/LidWithOMPPSobstacle.cpp")
 add_test_executable(OpenBoundaryOutlet.out "unit/OpenBoundaryOutlet.cpp")
 add_test_executable(SphereGenerationTest.out "unit/SphereGenerationTest.cpp")
+add_test_executable(ObstacleFromFile.out "unit/ObstacleFromFile.cpp")
